<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/journey"
            android:src="@drawable/journeyicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/euclidcircularbregular"
            android:text="@string/taming_temper"
            android:textColor="@color/user_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imageView"
            app:layout_constraintTop_toTopOf="@id/imageView" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="15dp"
            android:backgroundTint="@android:color/darker_gray"
            android:progress="3"
            android:progressTint="@color/primary"
            app:layout_constraintEnd_toEndOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/percentValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/euclidcircularbregular"
            android:text="@string/percent_default"
            android:textColor="@color/primary"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/progress_bar"
            app:layout_constraintStart_toEndOf="@id/progress_bar"
            app:layout_constraintTop_toTopOf="@id/progress_bar" />

        <ImageView
            android:id="@+id/temperLegendImg"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/legend_fire"
            android:src="@drawable/fire"
            app:layout_constraintBottom_toBottomOf="@id/temperValue"
            app:layout_constraintEnd_toStartOf="@id/temperValue"
            app:layout_constraintTop_toTopOf="@id/temperValue" />

        <TextView
            android:id="@+id/temperValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/euclidcircularbregular"
            android:text="@string/temper_default"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/user_icon_container"
            app:layout_constraintEnd_toStartOf="@id/user_icon_container"
            app:layout_constraintTop_toTopOf="@id/user_icon_container" />

        <FrameLayout
            android:id="@+id/user_icon_container"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/circle_gray"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/usericon" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/home_fragment"
        android:name="com.vince.tamingtemper.ui.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp"
        tools:layout="@layout/fragment_home" />



</androidx.coordinatorlayout.widget.CoordinatorLayout>
